force-app/main/default/objects/Work_Type_SR_Count__c/Work_Type_SR_Count__c.object-meta.xml
<CustomObject>
    <label>Work Type SR Count</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Work Type SR Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Type SR Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>