force-app/main/default/objects/Work_Type_SR_Count__c/fields/No_of_skilled_resources__c.field-meta.xml
<CustomField>
    <fullName>No_of_skilled_resources__c</fullName>
    <label>No. of skilled resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>