force-app/main/default/objects/Work_Type_SR_Count__c/fields/Service_Resource_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Percentage__c</fullName>
    <label>Service Resource Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>