force-app/main/default/objects/Work_Type_SR_Count__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Work Type SR Counts</relationshipLabel>
    <relationshipName>Work_Type_SR_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>