force-app/main/default/objects/Work_Type_SR_Count__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Type SR Counts</relationshipLabel>
    <relationshipName>Work_Type_SR_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>