force-app/main/default/objects/Work_Type_SR_Count__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>No_of_skilled_resources__c</columns>
    <columns>Service_Resource_Percentage__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Work_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>contains</operation>
        <value>SD102</value>
    </filters>
    <label>All</label>
</ListView>